[gd_scene load_steps=12 format=3 uid="uid://cun4dd3k04knx"]

[ext_resource type="Texture2D" uid="uid://gkxovuyi4brj" path="res://Sprite Pack 5/3 - Big Red/Idle_(32 x 32).png" id="1_ial28"]
[ext_resource type="Script" path="res://mensageiro.gd" id="1_ox87n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u3ghe"]
size = Vector2(54, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gec3"]
atlas = ExtResource("1_ial28")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgw67"]
atlas = ExtResource("1_ial28")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya5vo"]
atlas = ExtResource("1_ial28")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhneo"]
atlas = ExtResource("1_ial28")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lya1"]
atlas = ExtResource("1_ial28")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak186"]
atlas = ExtResource("1_ial28")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_smra2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gec3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgw67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya5vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhneo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lya1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak186")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_mxlog"]
font_size = 10
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[node name="Mensageiro" type="Node2D"]
script = ExtResource("1_ox87n")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, 8.5)
shape = SubResource("RectangleShape2D_u3ghe")

[node name="texture" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_smra2")
autoplay = "default"

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = -2.0
label_settings = SubResource("LabelSettings_mxlog")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
